# cheat-base

./: Cargo.toml  README.md  build.ps1
.cargo/: config.toml
crates/app/: Cargo.toml
crates/app/src/: entry_point.rs
crates/app/src/draw/: mod.rs
crates/app/src/hooks/: mod.rs
crates/app/src/menu/: mod.rs
crates/app/src/sdk/: mod.rs
crates/app/src/variables/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/cfg/: mod.rs
crates/core/src/config/: mod.rs
crates/core/src/input/: mod.rs
crates/core/src/render/: mod.rs
crates/core/src/ui/: mod.rs
src/: entry_point.rs
src/config/: mod.rs
src/config/variables/: mod.rs
src/game/: mod.rs
src/game/hooks/: mod.rs
src/gfx/: mod.rs
src/gfx/draw/: mod.rs
src/gfx/menu/: mod.rs
src/gfx/menu/theme/: mod.rs
src/gfx/render/: mod.rs
src/utilities/: mod.rs
src/utilities/hook/: mod.rs
src/utilities/input/: mod.rs
src/utilities/logging/: mod.rs
src/utilities/math/: mod.rs
