[package]
name = "morphey"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
path = "src/entry_point.rs"

[dependencies]
hudhook = { git = "https://github.com/Fetch1337/hudhook.git", rev = "a4c37104a7976c34c2aa83b79176f1807a0f3a34" }
anyhow = "1"
libmem = "5.1"
minhook-sys = "0.1"
obfstr = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
palette = "0.7"
nalgebra = "0.34"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.dev]
opt-level = 0
debug = "full"
debug-assertions = true
overflow-checks = true
incremental = true
panic = "unwind"
split-debuginfo = "packed"

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
strip = "symbols"
lto = "fat"
panic = "abort"
